tests/fixtures/negative/security/HardcodedGcpServiceAccount.kt
package fixtures.negative.security

import java.io.File

val serviceAccount = File("service-account.json").readText()
